--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Job Scrapper</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+/>
 </head>
 <body>
-    <h1>Job Scrapper</h1>
-    <h4>What job do you want?</h4>
-    <form action="/search">
-        <input type="text" name="keyword" placeholder="Write keyword please">
-        <button>Search</button>
-    </form>
+    <main class="container">
+        <h1>Job Scrapper</h1>
+        <h4>What job do you want?</h4>
+        <form action="/search">
+            <input type="text" name="keyword" placeholder="Write keyword please">
+            <button>Search</button>
+        </form>
+    </main>
 </body>
 </html>
